<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <com.lrkj.widget.CircularRevealView
        android:id="@+id/reveal"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_gravity="center" />

    <FrameLayout
        android:id="@+id/frame"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="350dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/power"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:layoutAnimation="@anim/layout_controller_push_up_in"
                android:orientation="vertical">

                <EditText
                    android:hint="@string/dialog_ip_hint"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:id="@+id/et_ip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/dialog_ip_btn_conn"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:background="#3ae"
                    android:id="@+id/btn_connect"/>
            </LinearLayout>

        </LinearLayout>


    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="20dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/dialog_ip_status"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layoutAnimation="@anim/layout_controller_push_up_in">

                    <TextView
                        android:id="@+id/status_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/dialog_ip_status2"
                        android:textColor="#ffffff"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>

