<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <!-- Title bar -->

    <LinearLayout
        android:id="@+id/ll_titlebar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:background="@android:color/holo_blue_dark"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="系统管理"
            android:textColor="#fff"
            android:textSize="17sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/frame_dot"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_shutdown"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:onClick="onClickBtn"
            android:text="@string/btn_sys_shutdown"
            android:textColor="#fff"
            android:textSize="14sp"
            fbutton:buttonColor="@color/fbutton_color_belize_hole"
            fbutton:shadowEnabled="true" />

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_reboot"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:onClick="onClickBtn"
            android:text="@string/btn_sys_reboot"
            android:textColor="#fff"
            android:textSize="14sp"
            fbutton:buttonColor="@color/fbutton_color_amethyst"
            fbutton:shadowEnabled="true" />

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_kill"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:onClick="onClickBtn"
            android:text="@string/btn_sys_kill"
            android:textColor="#fff"
            android:textSize="14sp"
            fbutton:buttonColor="@color/fbutton_color_concrete"
            fbutton:shadowEnabled="true"  />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onClickBtn"
            android:textColor="#fff"
            android:textSize="14sp"
            fbutton:buttonColor="@color/fbutton_color_emerald"
            fbutton:shadowEnabled="true"
            android:text="@string/btn_sys_check" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eee"/>

    <TextView
        android:id="@+id/tvSpeed"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:textColor="#aaa"
        android:text="移动速度(1)"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"/>

    <SeekBar
        android:id="@+id/speedBar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:progressBackgroundTint="#555"
        android:progressTint="#0f0"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:max="5"
        android:progress="1"/>

</LinearLayout>