<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:padding="10dp">

    <View
        android:id="@+id/center_view"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true" />

    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@+id/ll_top"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_toLeftOf="@+id/frame_dot"
        android:layout_toStartOf="@+id/frame_dot"
        android:background="#f00">

        <com.lrkj.utils.LrSocketSurfaceView
            android:id="@+id/camera_video"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:visibility="gone"
            opencv:camera_id="4100"
            opencv:show_fps="false" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_dot"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignLeft="@+id/center_view"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="#0f0">

        <com.lrkj.utils.LrSocketSurfaceView
            android:id="@+id/camera_dot"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:visibility="gone"
            opencv:camera_id="4097"
            opencv:show_fps="false" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:background="#66000000"
        android:gravity="center_vertical|right"
        android:text="32323"
        android:textColor="#fff"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/frame_dot"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:onClick="onClickBtn"
            android:text="@string/btn_reset"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:onClick="onClickBtn"
            android:text="@string/btn_finish_map"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:onClick="onClickBtn"
            android:text="@string/btn_save_map"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:onClick="onClickBtn"
            android:text="@string/btn_exit_map"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:onClick="onClickBtn"
            android:text="U" />

        <Button
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:onClick="onClickBtn"
            android:text="D" />

        <Button
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:onClick="onClickBtn"
            android:text="L" />

        <Button
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:onClick="onClickBtn"
            android:text="R" />
    </LinearLayout>
</RelativeLayout>